--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
     "bootstrap": "3.3.7",
+    "express": "^4.16.2",
     "vue": "2.5.2",
     "vue-router": "3.0.1"
   },
