--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.2",
     "bootstrap": "3.3.7",
     "express": "^4.16.2",
+    "moment": "^2.20.1",
     "vue": "2.5.2",
     "vue-router": "3.0.1"
   },
