--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "3.3.7",
     "express": "^4.16.2",
     "moment": "^2.20.1",
+    "ramda": "^0.25.0",
     "vue": "2.5.2",
     "vue-router": "3.0.1"
   },
