--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "rimraf": "2.6.0",
     "semver": "5.3.0",
     "shelljs": "0.7.6",
+    "sinon": "^4.2.2",
     "uglifyjs-webpack-plugin": "1.1.1",
     "url-loader": "0.5.9",
     "vue-jest": "1.0.2",
